Fixed a couple of smaller bugs, completed example and added another example view.

--- a/boilerplate/app/home/home.mustache
+++ b/boilerplate/app/home/home.mustache
@@ -1,5 +1,5 @@
 {{> event-list}}
 <div class="controls">
     <a href="javascript:void(0)" class="emergency">Emergency</a>
-    <a href="javascript:void(0)">Search</a>
+    <a href="javascript:void(0)" class="search">Search</a>
 </div>
